--- a/src/blocks/element/__trash/element__trash.css
+++ b/src/blocks/element/__trash/element__trash.css
@@ -10,7 +10,7 @@
     position: absolute;
     top: 20px;
     right: 20px;
-    display: none;
+    /* display: none; */
   }
   
   .element__trash:hover {
